add paths topology

--- a/oncoFinder2/templates/database/pathway_detail.html
+++ b/oncoFinder2/templates/database/pathway_detail.html
@@ -6,7 +6,7 @@
 <div class="container">
         <h1>{{pathway.name}}</h1>
         <div class="text-muted">
-        DataBase: Human Pathways | AMCF = {{pathway.amcf}}
+        Organism: {{organism}} | DataBase: {{database}} | AMCF = {{pathway.amcf}}
         </div>
     <span class='pull-right'>
        <a href='{{ request.META.HTTP_REFERER }}'><<< back to pathways list</a>
