--- a/oncoFinder2/templates/base_profiles.html
+++ b/oncoFinder2/templates/base_profiles.html
@@ -53,7 +53,7 @@
      </div>   
       <ul class="nav navbar-nav navbar-left pr_upp_menu">
             <!-- <li><a href="#">Blog</a></li>  -->           
-            <li><a href="/db/pathways/"><img src='/static/images/laboratory_info.png' style="width: 40px; margin-right: 3px;"/>
+            <li><a href="/db/pathways/human/primary_old/"><img src='/static/images/laboratory_info.png' style="width: 40px; margin-right: 3px;"/>
                 Biochem database
                 </a>
             </li>
