updated single-sample view

--- a/oncoFinder2/templates/core/xpnprevfiles.html
+++ b/oncoFinder2/templates/core/xpnprevfiles.html
@@ -1,15 +1,15 @@
 {% extends "base_profiles.html" %}
 
-{% block title %}XPN normalization | OncoFinder v2.0{% endblock %}
+{% block title %}Harmonisation | OncoFinder v2.0{% endblock %}
 
 {% block content %}
 <div class="container">
 
   <h1>
   <img src='/static/images/tablet.png' style="width: 100px;"/>
-    XPN normalization. Previously calculated files 
+    Harmony. Previously calculated files 
   </h1>
-  <a href="/xpn/" class="btn btn-default pull-right">Normalize more datasets</a>
+  <a href="/xpn/" class="btn btn-default pull-right">Harmonise more datasets</a>
   <br/>
   <hr/>
 <table class="table">
