--- a/oncoFinder2/templates/base_profiles.html
+++ b/oncoFinder2/templates/base_profiles.html
@@ -66,7 +66,7 @@
                 </a>
             </li>
             <li><a href="/xpn/"><img src='/static/images/tablet.png' style="width: 40px; margin-right: 3px;"/>
-                XPN 
+                Harmony 
                 </a>
             </li>
      </ul>
