--- a/oncoFinder2/templates/core/xpndone.html
+++ b/oncoFinder2/templates/core/xpndone.html
@@ -1,20 +1,20 @@
 {% extends "base_profiles.html" %}
 
-{% block title %}XPN normalization done | OncoFinder v2.0{% endblock %}
+{% block title %}Harmonisation done | OncoFinder v2.0{% endblock %}
 
 {% block content %}
 <div class="container">
 
   <h1>
   <img src='/static/images/tablet.png' style="width: 100px;"/>
-    XPN normalization done 
+    Harmonisation done 
   </h1>
   <hr/>
  
  Click to download file with results: <a href="{{MEDIA_URL}}XPN/{{output_file}}">{{output_file}}</a>
  
  <br/><br/>
- <a href="/xpn/" class="btn btn-primary">Normalize more datasets</a>
+ <a href="/xpn/" class="btn btn-primary">Harmonise more datasets</a>
 
 </div>
 
