--- a/oncoFinder2/templates/core/xpnform.html
+++ b/oncoFinder2/templates/core/xpnform.html
@@ -1,13 +1,13 @@
 {% extends "base_profiles.html" %}
 
-{% block title %}XPN normalization | OncoFinder v2.0{% endblock %}
+{% block title %}Harmonisation | OncoFinder v2.0{% endblock %}
 
 {% block content %}
 <div class="container">
 
   <h1>
   <img src='/static/images/tablet.png' style="width: 100px;"/>
-    XPN normalization 
+    Harmony 
   </h1>
   <a href="/xpn/prevfiles/" class="btn btn-default pull-right">Previously calculated files</a>
   <hr/>
@@ -23,7 +23,7 @@
   
   <div class="panel panel-primary login_panel">
     <div class="panel-heading">
-      <h3 class="panel-title">XPN normalization parameters</h3>
+      <h3 class="panel-title">Harmonisation parameters</h3>
     </div>
     <div class="panel-body">
     <small>
@@ -58,7 +58,7 @@
           
     </div>
     <div class="panel-footer">
-      <button class="btn btn-primary" data-loading-text="Calculating..." id="startButton">Start normalization</button>
+      <button class="btn btn-primary" data-loading-text="Calculating..." id="startButton">Start harmonisation</button>
       
           <img src="/static/images/ajax-loader.gif" id="loader" style="margin: 10px 0 0 0; display:none" class="pull-right" />
      
