--- a/oncoFinder2/templates/document/ajax_pathway_detail.html
+++ b/oncoFinder2/templates/document/ajax_pathway_detail.html
@@ -4,7 +4,8 @@ AMCF = {{pathway.amcf}}
     <ul class="nav nav-tabs">
         <li class="active"><a href="#fragment-1" data-toggle="tab"><span>Differential Genes </span></a></li>
         <li><a href="#fragment-2" data-toggle="tab"><span>Nodes and Components</span></a></li>
-        <li><a href="#fragment-3" data-toggle="tab"><span>Graphic Scheme</span></a></li>
+        <li><a href="#fragment-3" data-toggle="tab"><span>Dinamic Graphic Scheme</span></a></li>
+        <li><a href="#fragment-4" data-toggle="tab"><span>Static Graphic Scheme</span></a></li>
     </ul>
     <div id="tabContent" class="tab-content">
 		<div id="fragment-1" class="tab-pane fade in active well">
@@ -30,7 +31,7 @@ AMCF = {{pathway.amcf}}
 		    </small>
 		    </div>
 		</div> 
-		<div id="fragment-3" class="tab-pane fade">
+		<div id="fragment-3" class="tab-pane fade ">
 		<div id="chart2" class="chart" style="width:860px;">
               <div class="description">Scheme of "{{pathway.name}}" pathway</div>        
     </div> 
@@ -76,14 +77,23 @@ AMCF = {{pathway.amcf}}
     }, true);
     </script>
  <div style="">
- <small>
- <table class="table table-bordered  table-striped">
- <tr><th>Node</th><th>NEL <span style='color:#fff'>= 1\n * &#931 CNR</span></th><th>Color</th></tr>
- {% for node in colorNodes %}
- <tr><td>{{node.name}}</th><td>{{node.nel}}</td><td style="color:{{node.color}}">{{node.color}}</td></tr>
- {% endfor %}
- </table></small>
-		</div>
+   <small>
+   <table class="table table-bordered  table-striped">
+      <tr><th>Node</th><th>NEL = 1\n * &#931 CNR</th><th>Color</th></tr>
+          {% for node in colorNodes %}
+          <tr><td>{{node.name}}</th><td>{{node.nel}}</td><td style="color:{{node.color}}">{{node.color}}</td></tr>
+          {% endfor %}
+   </table>
+   </small>
+ </div>
+</div>
+<div id="fragment-4" class="tab-pane  well">
+	<a target="_blank" href='/media/pathway.svg?path={{pathway.name}}&r={{rand}}' >	
+    <img src='/media/pathway.svg?path={{pathway.name}}&r={{rand}}' style="width:100%"/>
+    </a>
+
+		
 </div>
     
+</div>
 </div>
