--- a/oncoFinder2/templates/base_profiles.html
+++ b/oncoFinder2/templates/base_profiles.html
@@ -65,7 +65,7 @@
                 Medical DB
                 </a>
             </li>
-            <li><a href="/xpn/"><img src='/static/images/tablet.png' style="width: 40px; margin-right: 3px;"/>
+            <li><a href="/harmony/"><img src='/static/images/tablet.png' style="width: 40px; margin-right: 3px;"/>
                 Harmony 
                 </a>
             </li>
