--- a/oncoFinder2/templates/document/sample_detail.html
+++ b/oncoFinder2/templates/document/sample_detail.html
@@ -61,7 +61,8 @@
 	    {% for path in PMS%}
 	    <tr>
 	    <td>
-	      {{path.name}}
+	      {{path.name}}<br/>
+	      Database: {{path.database}}
 	      <button class="btn btn-info btn-sm pull-right" data-toggle="modal" 
 	              data-target=".bs-example-modal-lg" 
 	              onClick="fetchPathwayDetails({{path.id}}, '{{path.name}}')">
