implemented Shanbhala harmonisation

--- a/oncoFinder2/templates/base_profiles.html
+++ b/oncoFinder2/templates/base_profiles.html
@@ -65,8 +65,8 @@
                 Medical DB
                 </a>
             </li>
-            <li><a href="/harmony/"><img src='/static/images/tablet.png' style="width: 40px; margin-right: 3px;"/>
-                Harmony 
+            <li><a href="/shambhala/"><img src='/static/images/tablet.png' style="width: 40px; margin-right: 3px;"/>
+                Shambhala 
                 </a>
             </li>
      </ul>
