--- a/oncoFinder2/templates/core/harmonyprevfiles.html
+++ b/oncoFinder2/templates/core/harmonyprevfiles.html
@@ -9,7 +9,7 @@
   <img src='/static/images/tablet.png' style="width: 100px;"/>
     Harmony. Previously calculated files 
   </h1>
-  <a href="/xpn/" class="btn btn-default pull-right">Harmonise more datasets</a>
+  <a href="/shambhala/" class="btn btn-default pull-right">Harmonise more datasets</a>
   <br/>
   <hr/>
 <table class="table">
