--- a/oncoFinder2/templates/core/harmonydone.html
+++ b/oncoFinder2/templates/core/harmonydone.html
@@ -14,7 +14,7 @@
  Click to download file with results: <a href="{{MEDIA_URL}}XPN/{{output_file}}">{{output_file}}</a>
  
  <br/><br/>
- <a href="/xpn/" class="btn btn-primary">Harmonise more datasets</a>
+ <a href="/shambhala/" class="btn btn-primary">Harmonise more datasets</a>
 
 </div>
 
