--- a/oncoFinder2/templates/core/core_calculation_parameters.html
+++ b/oncoFinder2/templates/core/core_calculation_parameters.html
@@ -84,6 +84,10 @@
                 {{ form.use_fdr.label_tag }} <span class="glyphicon glyphicon-question-sign" data-toggle="tooltip"  data-placement="top" 
                  title="False discovery rate "  ></span>&nbsp;&nbsp;
                 {{ form.use_fdr }}
+                
+                {{ form.use_new_fdr.label_tag }}
+                {{ form.use_new_fdr }}
+                
                 {{ form.use_ttest_1sam.label_tag }}&nbsp;&nbsp;
                 {{ form.use_ttest_1sam }}
                 
