--- a/oncoFinder2/templates/core/test.html
+++ b/oncoFinder2/templates/core/test.html
@@ -20,6 +20,7 @@ TRUNCATE core_pathway;
 TRUNCATE core_gene; 
 TRUNCATE core_node; 
 TRUNCATE core_component; 
+TRUNCATE core_relation;
 SET FOREIGN_KEY_CHECKS = 1;
 
 
