--- a/oncoFinder2/templates/core/core_calculation_parameters.html
+++ b/oncoFinder2/templates/core/core_calculation_parameters.html
@@ -184,6 +184,8 @@
 <script>
 $(function() {
 	
+	$("#id_db_choice").css({"height":"100px"});
+	
 	$('#startButton').click(function () {
 	    var btn = $(this)
 	    btn.button('loading');
