visualise KEGG + minor design changes

--- a/oncoFinder2/templates/database/pathway_list.html
+++ b/oncoFinder2/templates/database/pathway_list.html
@@ -11,7 +11,8 @@
         <button type="button" class="btn btn-primary human primary_new"   onClick="location.href='/db/pathways/human/primary_new/'">Primary new</button>
         <button type="button" class="btn btn-primary human metabolism"  onClick="location.href='/db/pathways/human/metabolism/'" >Metabolism</button>
         <button type="button" class="btn btn-primary human cytoskeleton"   onClick="location.href='/db/pathways/human/cytoskeleton/'">Cytoskeleton</button>
-        
+        <button type="button" class="btn btn-primary human kegg"   onClick="location.href='/db/pathways/human/kegg/'">KEGG</button>
+        <button type="button" class="btn btn-primary human kegg_adjusted"   onClick="location.href='/db/pathways/human/kegg_adjusted/'">KEGG adjusted</button>
     </div>
     
     <span style="font-size:14px; margin-left:50px;">Mouse: </span><div class="btn-group btn-group-xs">
