mouse cytisceleton add

--- a/oncoFinder2/templates/database/pathway_list.html
+++ b/oncoFinder2/templates/database/pathway_list.html
@@ -19,6 +19,7 @@
         <button type="button" class="btn btn-primary mouse primary_old" onClick="location.href='/db/pathways/mouse/primary_old/'" >Primary old</button>
         <button type="button" class="btn btn-primary mouse primary_new"   onClick="location.href='/db/pathways/mouse/primary_new/'">Primary new</button>
         <button type="button" class="btn btn-primary mouse metabolism"  onClick="location.href='/db/pathways/mouse/metabolism/'" >Metabolism</button>
+        <button type="button" class="btn btn-primary mouse cytoskeleton"  onClick="location.href='/db/pathways/mouse/cytoskeleton/'" >Cytoskeleton</button>
         
                                                </div>
      </div>  
