add diff genes amount for Nicolay

--- a/oncoFinder2/templates/core/core_calculation_parameters.html
+++ b/oncoFinder2/templates/core/core_calculation_parameters.html
@@ -161,7 +161,11 @@
                 {{ form.calculate_pvalue_all }} &nbsp;with FDR {{ form.calculate_FDR_all }}
             {% endif %}
                 {{ form.new_pathway_names.label_tag }}&nbsp;
-                {{ form.new_pathway_names }}
+                {{ form.new_pathway_names }}<br/>
+                
+                {{ form.diff_genes_amount.label_tag }}&nbsp;
+                {{ form.diff_genes_amount }}
+                
       
       </small>
                 
