--- a/oncoFinder2/templates/database/pathway_list.html
+++ b/oncoFinder2/templates/database/pathway_list.html
@@ -12,8 +12,9 @@
         <button type="button" class="btn btn-primary human metabolism"  onClick="location.href='/db/pathways/human/metabolism/'" >Metabolism</button>
         <button type="button" class="btn btn-primary human cytoskeleton"   onClick="location.href='/db/pathways/human/cytoskeleton/'">Cytoskeleton</button>
         <button type="button" class="btn btn-primary human kegg"   onClick="location.href='/db/pathways/human/kegg/'">KEGG</button>
-        <button type="button" class="btn btn-primary human kegg_adjusted"   onClick="location.href='/db/pathways/human/kegg_adjusted/'">KEGG adjusted</button>
+        <button type="button" class="btn btn-primary human kegg_adjusted"   onClick="location.href='/db/pathways/human/kegg_adjusted/'">KEGG adj</button>
         <button type="button" class="btn btn-primary human nci"   onClick="location.href='/db/pathways/human/nci/'">NCI</button>
+        <button type="button" class="btn btn-primary human nci"   onClick="location.href='/db/pathways/human/biocarta/'">Biocarta</button>
     </div>
     
     <span style="font-size:14px; margin-left:50px;">Mouse: </span><div class="btn-group btn-group-xs">
