--- a/oncoFinder2/templates/core/shambala_form.html
+++ b/oncoFinder2/templates/core/shambala_form.html
@@ -32,23 +32,18 @@
     </div>
     <div class="panel-body">
 
-    <small>
-
-    <form class="form-horizontal" role="form" action="" 
+    <form class="form-horizontal" role="form" action=""
           method="post" enctype="multipart/form-data"  >
           {% csrf_token %}
           <input type='hidden' name='harmony_type' id="id_xpn_type" value='harmony_equi' />
-          
+
+          <small>
           {{ form.document.label_tag }} {{ form.document }} <br/><br/>
           {{ form.auxiliary.label_tag }} {{ form.auxiliary }}<br/>
-          {{ form.log_scale.label_tag }}&nbsp;&nbsp;{{ form.log_scale }}<br/><br/>
-          
-         
-          
-          
+          {{ form.log_scale.label_tag }}&nbsp;&nbsp;{{ form.log_scale }}<br/>
+          {{ form.random_seed.label_tag }} {{ form.random_seed }}<br/><br/>
           </small>
- 
-          
+
     </div>
     <div class="panel-footer">
       <button class="btn btn-primary" data-loading-text="Calculating..." id="startButton">Start Shambala</button>
